fix image using css flex

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Hamburger Navbar</title>
+    <title>Home</title>
   </head>
 
   <body>
@@ -34,37 +34,35 @@
       </nav>
     </header>
 
-    <div class="responsive">
-      <div class="gallery">
+    <div class="row">
+      <div class="column">
         <a href="calender/maret.html">
-          <img src="img/baubau.jpeg" alt="siompu" width="600" height="400"
+          <img src="img/baubau.jpeg" style="width: 100%" alt="siompu"
         /></a>
         <div class="desc">Siompu Baubau</div>
       </div>
-    </div>
 
-    <div class="responsive">
-      <div class="gallery">
+      <div class="column">
         <a target="blank" href="#">
-          <img src="img/topa.jpeg" alt="siompu" width="600" height="400"
+          <img
+            src="img/topa.jpeg"
+            alt="siompu"
+            style="width: 100%"
+            alt="siompu"
         /></a>
         <div class="desc">Siompu Topa</div>
       </div>
-    </div>
 
-    <div class="responsive">
-      <div class="gallery">
+      <div class="column">
         <a target="blank" href="#">
-          <img src="img/batauga.jpeg" alt="siompu" width="600" height="400"
+          <img src="img/batauga.jpeg" style="width: 100%" alt="siompu"
         /></a>
         <div class="desc">Siompu Batauga</div>
       </div>
-    </div>
 
-    <div class="responsive">
-      <div class="gallery">
+      <div class="column">
         <a target="blank" href="#">
-          <img src="img/molona.jpeg" alt="siompu" width="600" height="400"
+          <img src="img/molona.jpeg" style="width: 100%" alt="siompu"
         /></a>
         <div class="desc">Siompu Barat Baubau</div>
       </div>
