make airLaut.html

--- a/airLaut.html
+++ b/airLaut.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Home</title>
+    <title>Hamburger Navbar</title>
   </head>
 
   <body>
@@ -33,40 +33,15 @@
         </div>
       </nav>
     </header>
-
-    <div class="row">
-      <div class="column">
-        <a href="siompuBaubau/maret.html">
-          <img src="img/baubau.jpeg" style="width: 100%" alt="siompu baubau"
-        /></a>
-        <div class="desc">Siompu Baubau</div>
-      </div>
-
-      <div class="column">
-        <a target="blank" href="#">
-          <img
-            src="img/topa.jpeg"
-            alt="siompu"
-            style="width: 100%"
-            alt="siompu"
-        /></a>
-        <div class="desc">Siompu Topa</div>
-      </div>
-
-      <div class="column">
-        <a target="blank" href="#">
-          <img src="img/batauga.jpeg" style="width: 100%" alt="siompu"
-        /></a>
-        <div class="desc">Siompu Batauga</div>
-      </div>
-
-      <div class="column">
-        <a target="blank" href="#">
-          <img src="img/molona.jpeg" style="width: 100%" alt="siompu"
-        /></a>
-        <div class="desc">Siompu Barat Baubau</div>
-      </div>
-    </div>
+    <p class="about">
+      Halaman ini dalam tahap pengembangan. Dalam halaman ini rencana beta akang
+      biking prediksi tinggi gelombang dan pasang surut air laut. Beta ada
+      kumpul API (Apllication Programming Interface) mudah-mudahan BMKG seng
+      kawaja mo kasih beta data citra satelit real-time pantauan air laut dalam
+      bentuk JSON (JavaScript Object Notation) . Kalau seng ada data tenang sa
+      beta bisa hack akang "no system safe" samua beta lakukan untuk keperluan
+      orang banyak.
+    </p>
   </body>
 
   <script src="/main.js"></script>
