--- a/tentang.html
+++ b/tentang.html
@@ -20,7 +20,7 @@
             <a href="index.html" class="nav-link">Kapal</a>
           </li>
           <li class="nav-item">
-            <a href="#" class="nav-link">Air Laut</a>
+            <a href="airLaut.html" class="nav-link">Air Laut</a>
           </li>
           <li class="nav-item">
             <a href="kontak.html" class="nav-link">Kontak</a>
