add text in tentang.html

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
 
       <div class="column">
-        <a target="blank" href="#">
+        <a href="#">
           <img
             src="img/topa.jpeg"
             alt="siompu"
@@ -54,14 +54,14 @@
       </div>
 
       <div class="column">
-        <a target="blank" href="#">
+        <a href="siompuBatauga/batauga.html">
           <img src="img/batauga.jpeg" style="width: 100%" alt="siompu"
         /></a>
         <div class="desc">Siompu Batauga</div>
       </div>
 
       <div class="column">
-        <a target="blank" href="#">
+        <a href="#">
           <img src="img/molona.jpeg" style="width: 100%" alt="siompu"
         /></a>
         <div class="desc">Siompu Barat Baubau</div>
