--- a/siompuBatauga/batauga.html
+++ b/siompuBatauga/batauga.html
@@ -34,11 +34,14 @@
       </nav>
     </header>
     <p class="about">
-
-    aplikasi made with love by Kamhar Ngado, M.Pd. (la Kamal). La kamal adalah seorang software
-      engineer dan pendidik matematika. La Kamal memiliki minat dalam bidang Aljabar Komputer, website,
-      aplikasi Android, Kecerdasan Buatan, pembuatan game, robotika dan
-      pendidikan matematika.
+      kapal siompu batauga adalah kapal cepat mini dengan dengan tujuan pulang
+      pergi siompu ke Batauga. Kapal ini start dari siompu pagi hari kurang
+      lebih jam 6:30 WITA. Tarif normal kapal batauga perorangan adalah 10.000,
+      motor kecil (supra, revo, dll) adalah 30.000, motor besar (vixion, nMax,
+      R15, dll) adalah 50.000 dengan ketentuan jumlah penumpang atau motor
+      mencapai tarif 200.000 sekali jalan ke Batauga dan 100.000 dengan tujuan
+      ke Siompu. Apabila tidak mencapai harga tarif normal maka penumpang akan
+      diminta biaya ekstra tergantung situasi dan kondisi.
     </p>
   </body>
 
