--- a/tentang.html
+++ b/tentang.html
@@ -34,11 +34,12 @@
       </nav>
     </header>
     <p class="about">
-
-    aplikasi made with love by Kamhar Ngado, M.Pd. (la Kamal). La kamal adalah seorang software
-      engineer dan pendidik matematika. La Kamal memiliki minat dalam bidang Aljabar Komputer, website,
-      aplikasi Android, Kecerdasan Buatan, pembuatan game, robotika dan
-      pendidikan matematika.
+      aplikasi made with love by Kamhar Ngado, M.Pd. (la Kamal), tujuan dari
+      saya membuat aplikasi ini bermula dari masyarakat siompu yang selalu
+      bertanya ke saya mengenai jadwal kapal siompu. La kamal adalah seorang
+      software engineer dan pendidik matematika. La Kamal memiliki minat dalam
+      bidang Aljabar Komputer, website, aplikasi Android, Kecerdasan Buatan,
+      pembuatan game, robotika dan pendidikan matematika.
     </p>
   </body>
 
