fix bug in batauga.html

--- a/siompuBatauga/batauga.html
+++ b/siompuBatauga/batauga.html
@@ -5,25 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/styles.css" />
-    <title>Hamburger Navbar</title>
+    <title>siompuBatauga</title>
   </head>
 
   <body>
     <header class="header">
       <nav class="navbar">
-        <a href="index.html" class="nav-logo">Jadwal Kapal Siompu</a>
+        <a href="../index.html" class="nav-logo">Jadwal Kapal Siompu</a>
         <ul class="nav-menu">
           <li class="nav-item">
-            <a href="#" class="nav-link">Tentang</a>
+            <a href="../tentang.html" class="nav-link">Tentang</a>
           </li>
           <li class="nav-item">
-            <a href="index.html" class="nav-link">Kapal</a>
+            <a href="../index.html" class="nav-link">Kapal</a>
           </li>
           <li class="nav-item">
-            <a href="airLaut.html" class="nav-link">Air Laut</a>
+            <a href="../airLaut.html" class="nav-link">Air Laut</a>
           </li>
           <li class="nav-item">
-            <a href="kontak.html" class="nav-link">Kontak</a>
+            <a href="../kontak.html" class="nav-link">Kontak</a>
           </li>
         </ul>
         <div class="hamburger">
@@ -34,7 +34,7 @@
       </nav>
     </header>
     <p class="about">
-      kapal siompu batauga adalah kapal cepat mini dengan dengan tujuan pulang
+      kapal siompu batauga adalah kapal cepat mini dengan tujuan pulang
       pergi siompu ke Batauga. Kapal ini start dari siompu pagi hari kurang
       lebih jam 6:30 WITA. Tarif normal kapal batauga perorangan adalah 10.000,
       motor kecil (supra, revo, dll) adalah 30.000, motor besar (vixion, nMax,
