--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       </div>
 
       <div class="column">
-        <a href="#">
+        <a href="siompuTopa/siompuTopa.html">
           <img
             src="img/topa.jpeg"
             alt="siompu"
