--- a/siompuTopa/siompuTopa.html
+++ b/siompuTopa/siompuTopa.html
@@ -34,20 +34,15 @@
         </div>
       </nav>
     </header>
-    <p class="about">kapal siompu topa ada tujuh kapal yang terdiri dari</p>
-    <ul>
-      <li>KM Bintang Tujuh</li>
-      <li>KM. Bintang Enam</li>
-      <li>KM. Tiwikila</li>
-      <li>KM. Sinar Pagi</li>
-      <li>KM. Latiawa</li>
-      <li>KM. Dimartin</li>
-      <li>KM. Tongali Star</li>
-    </ul>
     <p class="about">
-      Karena jumlah kapal ada tujuh maka jadwal kapal mengikuti diurutkan
-      berdasarkan jumlah hari sebagai berikut:
+      kapal siompu topa memiliki 2 rute terdiri dari pagi hari dan siang hari.
+      Pada rute pagi hari kapal akan berangkat dari siompu ke topa jam 7.00 WITA
+      dan dari topa ke Siompu jam 9.00 WITA. sedangkan pada rute siang hari
+      kapal akan berangkat dari siompu ke baubau jam 1:30 WITA dan dari baubau
+      ke Siompu jam 3:30 WITA.Karena jumlah kapal ada tujuh maka jadwal kapal
+      diurutkan berdasarkan jumlah hari sebagai berikut:
     </p>
+
     <table>
       <tr>
         <td>sen</td>
@@ -68,6 +63,17 @@
         <td>TN</td>
       </tr>
     </table>
+    <ul>
+      <li>Keterangan:</li>
+      <li>B7 = Bintang Tujuh</li>
+      <li>B6 = Bintang Enam</li>
+      <li>SP = Sinar Pagi</li>
+      <li>BK = Bongkia</li>
+      <li>TK = Tiwikila</li>
+      <li>LT = Latiawa</li>
+      <li>DM = Dimartin</li>
+      <li>TN = Tongali</li>
+    </ul>
   </body>
 
   <script src="/main.js"></script>
