--- a/airLaut.html
+++ b/airLaut.html
@@ -38,8 +38,7 @@
       biking prediksi tinggi gelombang dan pasang surut air laut. Beta ada
       kumpul API (Apllication Programming Interface) mudah-mudahan BMKG seng
       kawaja mo kasih beta data citra satelit real-time pantauan air laut dalam
-      bentuk JSON (JavaScript Object Notation) . Kalau seng ada data tenang sa
-      beta bisa hack akang "no system safe" samua beta lakukan untuk keperluan
+      bentuk JSON (JavaScript Object Notation). samua beta lakukan untuk keperluan
       orang banyak.
     </p>
   </body>
