--- a/tentang.html
+++ b/tentang.html
@@ -37,9 +37,9 @@
       aplikasi ini di buat oleh kamhar ngado (la kamal), tujuan dari saya
       membuat aplikasi ini bermula dari masyarakat siompu yang selalu bertanya
       ke saya mengenai jadwal kapal siompu. La kamal adalah seorang software
-      engineer. La Kamal memiliki minat dalam bidang Aljabar Komputer, website,
-      aplikasi Android, Kecerdasan Buatan, pembuatan game, robotika dan
-      pendidikan matematika.
+      yang memiliki minat dalam bidang Aljabar Komputer, website, aplikasi
+      Android, Kecerdasan Buatan, pembuatan game, robotika dan pendidikan
+      matematika.
     </p>
   </body>
 
