add google adsense

--- a/airLaut.html
+++ b/airLaut.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- google ads -->
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6719155690099322"
+      crossorigin="anonymous"
+    ></script>
+    <!-- google ads -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -38,8 +45,8 @@
       biking prediksi tinggi gelombang dan pasang surut air laut. Beta ada
       kumpul API (Apllication Programming Interface) mudah-mudahan BMKG seng
       kawaja mo kasih beta data citra satelit real-time pantauan air laut dalam
-      bentuk JSON (JavaScript Object Notation). samua beta lakukan untuk keperluan
-      orang banyak.
+      bentuk JSON (JavaScript Object Notation). samua beta lakukan untuk
+      keperluan orang banyak.
     </p>
   </body>
 
