--- a/siompuBatauga/batauga.html
+++ b/siompuBatauga/batauga.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- google ads -->
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6719155690099322"
+      crossorigin="anonymous"
+    ></script>
+    <!-- google ads -->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -34,14 +41,14 @@
       </nav>
     </header>
     <p class="about">
-      kapal siompu batauga adalah kapal cepat mini dengan tujuan pulang
-      pergi siompu ke Batauga. Kapal ini start dari siompu pagi hari kurang
-      lebih jam 6:30 WITA. Tarif normal kapal batauga perorangan adalah 10.000,
-      motor kecil (supra, revo, dll) adalah 30.000, motor besar (vixion, nMax,
-      R15, dll) adalah 50.000 dengan ketentuan jumlah penumpang atau motor
-      mencapai tarif 200.000 sekali jalan ke Batauga dan 100.000 dengan tujuan
-      ke Siompu. Apabila tidak mencapai harga tarif normal maka penumpang akan
-      diminta biaya ekstra tergantung situasi dan kondisi.
+      kapal siompu batauga adalah kapal cepat mini dengan tujuan pulang pergi
+      siompu ke Batauga. Kapal ini start dari siompu pagi hari kurang lebih jam
+      6:30 WITA. Tarif normal kapal batauga perorangan adalah 10.000, motor
+      kecil (supra, revo, dll) adalah 30.000, motor besar (vixion, nMax, R15,
+      dll) adalah 50.000 dengan ketentuan jumlah penumpang atau motor mencapai
+      tarif 200.000 sekali jalan ke Batauga dan 100.000 dengan tujuan ke Siompu.
+      Apabila tidak mencapai harga tarif normal maka penumpang akan diminta
+      biaya ekstra tergantung situasi dan kondisi.
     </p>
   </body>
 
