--- a/siompuBaubau/april.html
+++ b/siompuBaubau/april.html
@@ -22,17 +22,17 @@
     </p>
     <table>
       <tr>
-        <td>sen</td>
-        <td>sel</td>
-        <td>rab</td>
-        <td>kam</td>
-        <td>jum</td>
-        <td>sab</td>
-        <td>min</td>
+        <td class="hari">sen</td>
+        <td class="hari">sel</td>
+        <td class="hari">rab</td>
+        <td class="hari">kam</td>
+        <td class="hari">jum</td>
+        <td class="hari">sab</td>
+        <td class="hari">min</td>
       </tr>
       <tr>
         <td>x</td>
-        <td><a href="#">x</a></td>
+        <td>x</td>
         <td>x</td>
         <td>x</td>
         <td>1</td>
@@ -54,34 +54,34 @@
         <td>13</td>
         <td>
           14 <br />
-          LT
+          <span>LT</span>
         </td>
         <td>
           15 <br />
-          B7
+          <span>B7</span>
         </td>
         <td>
           16 <br />
-          B6
+          <span>B6</span>
         </td>
-        <td>17 <br />TK</td>
+        <td>17 <br /><span>TK</span></td>
       </tr>
       <tr>
-        <td>18 <br />BK</td>
-        <td>19 <br />SP</td>
-        <td>20 <br />LT</td>
-        <td>21 <br />B7</td>
-        <td>22 <br />B6</td>
-        <td>23 <br />TK</td>
-        <td>24 <br />BK</td>
+        <td>18 <br /><span>BK</span></td>
+        <td>19 <br /><span>SP</span></td>
+        <td>20 <br /><span>LT</span></td>
+        <td>21 <br /><span>B7</span></td>
+        <td>22 <br /><span>B6</span></td>
+        <td>23 <br /><span>TK</span></td>
+        <td>24 <br /><span>BK</span></td>
       </tr>
       <tr>
-        <td>25 <br />SP</td>
-        <td>26 <br />LT</td>
-        <td>27 <br />B7</td>
-        <td>28 <br />B6</td>
-        <td>29 <br />TK</td>
-        <td>30 <br />BK</td>
+        <td>25 <br /><span>SP</span></td>
+        <td>26 <br /><span>LT</span></td>
+        <td>27 <br /><span>B7</span></td>
+        <td>28 <br /><span>B6</span></td>
+        <td>29 <br /><span>TK</span></td>
+        <td>30 <br /><span>BK</span></td>
         <td>x</td>
       </tr>
     </table>
