--- a/siompuBaubau/april.html
+++ b/siompuBaubau/april.html
@@ -13,9 +13,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maret</title>
     <link rel="stylesheet" href="/css/calender.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
   </head>
   <body>
-    <a href="/index.html">kembali</a>
+    <header class="header">
+      <nav class="navbar">
+        <a href="../index.html" class="nav-logo">Jadwal Kapal Siompu</a>
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="../tentang.html" class="nav-link">Tentang</a>
+          </li>
+          <li class="nav-item">
+            <a href="../index.html" class="nav-link">Kapal</a>
+          </li>
+          <li class="nav-item">
+            <a href="../airLaut.html" class="nav-link">Air Laut</a>
+          </li>
+          <li class="nav-item">
+            <a href="../kontak.html" class="nav-link">Kontak</a>
+          </li>
+        </ul>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+      </nav>
+    </header>
     <p class="text1">
       Jadwal Kapal Siompu Baubau <br />
       April 2022
@@ -85,7 +109,7 @@
         <td>x</td>
       </tr>
     </table>
-    <ul>
+    <ul class="keterangan">
       <li>Keterangan:</li>
       <li>B7 = Bintang Tujuh</li>
       <li>B6 = Bintang Enam</li>
@@ -95,4 +119,6 @@
       <li>LT = Latiawa</li>
     </ul>
   </body>
+
+  <script src="/main.js"></script>
 </html>
