--- a/siompuBaubau/mei.html
+++ b/siompuBaubau/mei.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>april</title>
+    <title>mei</title>
     <link rel="stylesheet" href="/css/calender.css" />
     <link rel="stylesheet" href="/css/styles.css" />
   </head>
@@ -42,7 +42,7 @@
     </header>
     <p class="text1">
       Jadwal Kapal Siompu Baubau <br />
-      April 2022
+      Mei 2022
     </p>
     <table>
       <tr>
@@ -112,7 +112,7 @@
 
     <table>
       <tr>
-        <td><a href="april.html">april</a> </td>
+        <td><a href="april.html">april</a></td>
         <td><a href="mei.html">mei</a></td>
         <td><a href="juni.html">juni</a></td>
       </tr>
@@ -127,7 +127,6 @@
       <li>TK = Tiwikila</li>
       <li>LT = Latiawa</li>
     </ul>
-    
   </body>
 
   <script src="/main.js"></script>
