--- a/tentang.html
+++ b/tentang.html
@@ -43,7 +43,7 @@
     <p class="about">
       aplikasi ini di buat oleh kamhar ngado (la kamal), tujuan dari saya
       membuat aplikasi ini bermula dari masyarakat siompu yang selalu bertanya
-      ke saya mengenai jadwal kapal siompu. La kamal adalah seorang software
+      ke saya mengenai jadwal kapal siompu. La kamal adalah seorang software engineer
       yang memiliki minat dalam bidang Aljabar Komputer, website, aplikasi
       Android, Kecerdasan Buatan, pembuatan game, robotika dan pendidikan
       matematika.
