--- a/siompuTopa/siompuTopa.html
+++ b/siompuTopa/siompuTopa.html
@@ -52,25 +52,25 @@
 
     <table>
       <tr>
-        <td>sen</td>
-        <td>sel</td>
-        <td>rab</td>
-        <td>kam</td>
-        <td>jum</td>
-        <td>sab</td>
-        <td>min</td>
+        <td class="hari">sen</td>
+        <td class="hari">sel</td>
+        <td class="hari">rab</td>
+        <td class="hari">kam</td>
+        <td class="hari">jum</td>
+        <td class="hari">sab</td>
+        <td class="hari">min</td>
       </tr>
       <tr>
-        <td>B7</td>
-        <td><a href="#">LT</a></td>
-        <td>BK</td>
-        <td>DM</td>
-        <td>SP</td>
-        <td>TK</td>
-        <td>TN</td>
+        <td><span>B7</span></td>
+        <td><span>LT</span></td>
+        <td><span>BK</span></td>
+        <td><span>DM</span></td>
+        <td><span>SP</span></td>
+        <td><span>TK</span></td>
+        <td><span>TN</span></td>
       </tr>
     </table>
-    <ul>
+    <ul class="keterangan">
       <li>Keterangan:</li>
       <li>B7 = Bintang Tujuh</li>
       <li>B6 = Bintang Enam</li>
