--- a/tentang.html
+++ b/tentang.html
@@ -41,12 +41,10 @@
       </nav>
     </header>
     <p class="about">
-      aplikasi ini di buat oleh kamhar ngado (la kamal), tujuan dari saya
-      membuat aplikasi ini bermula dari masyarakat siompu yang selalu bertanya
-      ke saya mengenai jadwal kapal siompu. La kamal adalah seorang software engineer
-      yang memiliki minat dalam bidang Aljabar Komputer, website, aplikasi
-      Android, Kecerdasan Buatan, pembuatan game, robotika dan pendidikan
-      matematika.
+      aplikasi ini adalah proyek open source mula-mula di buat oleh orang
+      siompu, tujuan dari aplikasi ini dibuat bermula dari masyarakat siompu
+      yang selalu bertanya mengenai jadwal kapal siompu. source code proyek ini
+      dapat dilihat pada github https://github.com/kamhar-ngado/kapalSiompu
     </p>
   </body>
 
