fix text in tentang.html

--- a/tentang.html
+++ b/tentang.html
@@ -44,7 +44,9 @@
       aplikasi ini adalah proyek open source mula-mula di buat oleh orang
       siompu, tujuan dari aplikasi ini dibuat bermula dari masyarakat siompu
       yang selalu bertanya mengenai jadwal kapal siompu. source code proyek ini
-      dapat dilihat pada github https://github.com/kamhar-ngado/kapalSiompu
+      dapat dilihat pada github
+      <a href="https://github.com/kamhar-ngado/kapalSiompu"></a>
+      https://github.com/kamhar-ngado/kapalSiompu
     </p>
   </body>
 
