--- a/tentang.html
+++ b/tentang.html
@@ -43,10 +43,11 @@
     <p class="about">
       aplikasi ini adalah proyek open source mula-mula di buat oleh orang
       siompu, tujuan dari aplikasi ini dibuat bermula dari masyarakat siompu
-      yang selalu bertanya mengenai jadwal kapal siompu. source code proyek ini
+      yang selalu bertanya mengenai jadwal kapal siompu. Source code proyek ini
       dapat dilihat pada github
-      <a href="https://github.com/kamhar-ngado/kapalSiompu"></a>
-      https://github.com/kamhar-ngado/kapalSiompu
+      <a href="https://github.com/kamhar-ngado/kapalSiompu/"
+        >https://github.com/kamhar-ngado/kapalSiompu</a
+      >
     </p>
   </body>
 
