fix typo on airLaut.html

--- a/airLaut.html
+++ b/airLaut.html
@@ -40,14 +40,7 @@
         </div>
       </nav>
     </header>
-    <p class="about">
-      Halaman ini dalam tahap pengembangan. Dalam halaman ini rencana beta akang
-      biking prediksi tinggi gelombang dan pasang surut air laut. Beta ada
-      kumpul API (Apllication Programming Interface) mudah-mudahan BMKG seng
-      kawaja mo kasih beta data citra satelit real-time pantauan air laut dalam
-      bentuk JSON (JavaScript Object Notation). samua beta lakukan untuk
-      keperluan orang banyak.
-    </p>
+    <p class="about">Halaman ini dalam tahap pengembangan.</p>
   </body>
 
   <script src="/main.js"></script>
