--- a/tentang.html
+++ b/tentang.html
@@ -41,13 +41,9 @@
       </nav>
     </header>
     <p class="about">
-      aplikasi ini adalah proyek open source mula-mula di buat oleh orang
-      siompu, tujuan dari aplikasi ini dibuat bermula dari masyarakat siompu
-      yang selalu bertanya mengenai jadwal kapal siompu. Source code proyek ini
-      dapat dilihat pada github
-      <a href="https://github.com/kamhar-ngado/kapalSiompu/"
-        >https://github.com/kamhar-ngado/kapalSiompu</a
-      >
+      aplikasi ini di buat oleh orang siompu, tujuan dari aplikasi ini dibuat
+      bermula dari masyarakat siompu yang selalu bertanya mengenai jadwal kapal
+      siompu.
     </p>
   </body>
 
