--- a/siompuBaubau/mei.html
+++ b/siompuBaubau/mei.html
@@ -87,21 +87,21 @@
         <td>18 <br /><span>TK</span></td>
         <td>19 <br /><span>BK</span></td>
         <td>20 <br /><span>SP</span></td>
-        <td>21 <br><span>LT</span></td>
-        <td>22 <br><span>B7</span></td>
+        <td>21 <br /><span>LT</span></td>
+        <td>22 <br /><span>B7</span></td>
       </tr>
       <tr>
-        <td>23 <br><span>B6</span></td>
-        <td>24 <br><span>TK</span></td>
-        <td>25 <br><span>BK</span></td>
-        <td>26 <br><span>SP</span></td>
-        <td>27 <br><span>LT</span></td>
-        <td>28 <br><span>B7</span></td>
-        <td>29 <br><span>B6</span></td>
+        <td>23 <br /><span>B6</span></td>
+        <td>24 <br /><span>TK</span></td>
+        <td>25 <br /><span>BK</span></td>
+        <td>26 <br /><span>SP</span></td>
+        <td>27 <br /><span>LT</span></td>
+        <td>28 <br /><span>B7</span></td>
+        <td>29 <br /><span>B6</span></td>
       </tr>
       <tr>
-        <td>30 <br><span>B6</span></td>
-        <td>31 <br><span>TK</span></td>
+        <td>30 <br /><span>B6</span></td>
+        <td>31 <br /><span>TK</span></td>
         <td>x</td>
         <td>x</td>
         <td>x</td>
