--- a/kontak.html
+++ b/kontak.html
@@ -14,6 +14,11 @@
     <title>Kontak</title>
   </head>
   <body>
-    <p>email:kamhar.ngado.id@gmail.com</p>
+    <ul>
+      <li><a href="">email:</a></li>
+      <li><a href="">facebook</a></li>
+      <li><a href="">instagram</a></li>
+      <li><a href="">youtube</a></li>
+    </ul>
   </body>
 </html>
