--- a/kontak.html
+++ b/kontak.html
@@ -11,14 +11,48 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kontak</title>
+    <link rel="stylesheet" href="/css/calender.css" />
+    <link rel="stylesheet" href="/css/styles.css" />
+    <title>tentang</title>
   </head>
+
   <body>
-    <ul>
-      <li><a href="">email:</a></li>
-      <li><a href="">facebook</a></li>
-      <li><a href="">instagram</a></li>
-      <li><a href="">youtube</a></li>
+    <header class="header">
+      <nav class="navbar">
+        <a href="index.html" class="nav-logo">Jadwal Kapal Siompu</a>
+        <ul class="nav-menu">
+          <li class="nav-item">
+            <a href="#" class="nav-link">Tentang</a>
+          </li>
+          <li class="nav-item">
+            <a href="index.html" class="nav-link">Kapal</a>
+          </li>
+          <li class="nav-item">
+            <a href="airLaut.html" class="nav-link">Air Laut</a>
+          </li>
+          <li class="nav-item">
+            <a href="kontak.html" class="nav-link">Kontak</a>
+          </li>
+        </ul>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+      </nav>
+    </header>
+    <ul class="keterangan">
+      <li><a href="#">email:kamhar.ngado.id@gmail.com</a></li>
+      <li><a href="#">facebook</a></li>
+      <li><a href="#">instagram</a></li>
+      <li>
+        <a
+          href="https://www.youtube.com/channel/UCJYepI035cFv_0MZw0ClWow/videos"
+          >youtube</a
+        >
+      </li>
     </ul>
   </body>
+
+  <script src="/main.js"></script>
 </html>
