--- a/kontak.html
+++ b/kontak.html
@@ -41,6 +41,12 @@
         </div>
       </nav>
     </header>
+    <p class="about">
+      Ingin membuat website sekolah, e-learning, ecomerce dll? teknologi yang
+      saya gunakan adalah yang terpopuler saat ini yaitu Mongodb, Express, React
+      dan Nodejs (MERN)
+    </p>
+
     <ul class="keterangan">
       <li><a href="#">email:kamhar.ngado.id@gmail.com</a></li>
       <li><a href="#">facebook</a></li>
