--- a/siompuBaubau/april.html
+++ b/siompuBaubau/april.html
@@ -44,6 +44,7 @@
       Jadwal Kapal Siompu Baubau <br />
       April 2022
     </p>
+    <p id="tanggal"></p>
     <table>
       <tr>
         <td class="hari">sen</td>
@@ -130,4 +131,5 @@
   </body>
 
   <script src="/main.js"></script>
+  <script src="/style.js"></script>
 </html>
