--- a/siompuBaubau/april.html
+++ b/siompuBaubau/april.html
@@ -44,8 +44,13 @@
       Jadwal Kapal Siompu Baubau <br />
       April 2022
     </p>
-    <p id="tanggal"></p>
+
     <table>
+      <tr>
+        <td id="hari"></td>
+        <td id="bulan"></td>
+        <td id="tahun"></td>
+      </tr>
       <tr>
         <td class="hari">sen</td>
         <td class="hari">sel</td>
