--- a/siompuBaubau/april.html
+++ b/siompuBaubau/april.html
@@ -40,10 +40,7 @@
         </div>
       </nav>
     </header>
-    <p class="text1">
-      Jadwal Kapal Siompu Baubau <br />
-      April 2022
-    </p>
+    <p class="text1">Jadwal Kapal Siompu Baubau <br /></p>
 
     <table>
       <tr>
@@ -51,6 +48,9 @@
         <td id="bulan"></td>
         <td id="tahun"></td>
       </tr>
+    </table>
+
+    <table>
       <tr>
         <td class="hari">sen</td>
         <td class="hari">sel</td>
