fix border date

--- a/siompuBaubau/april.html
+++ b/siompuBaubau/april.html
@@ -42,7 +42,7 @@
     </header>
     <p class="text1">Jadwal Kapal Siompu Baubau <br /></p>
 
-    <table>
+    <table class="kalenderjs">
       <tr>
         <td id="hari"></td>
         <td id="bulan"></td>
