--- a/siompuBaubau/mei.html
+++ b/siompuBaubau/mei.html
@@ -44,6 +44,14 @@
       Jadwal Kapal Siompu Baubau <br />
       Mei 2022
     </p>
+
+    <tr>
+      <td class="hari2"></td>
+      <td class="bulan2"></td>
+      <td class="tahun2"></td>
+    </tr>
+  </table>
+
     <table>
       <tr>
         <td class="hari">sen</td>
@@ -130,4 +138,5 @@
   </body>
 
   <script src="/main.js"></script>
+  <script src="/style.js"></script>
 </html>
