--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="row">
       <div class="column">
         <a href="siompuBaubau/april.html">
-          <img src="img/baubau.png" style="width: 100%" alt="siompu baubau"
+          <img src="img/baubau.jpg" style="width: 100%" alt="siompu baubau"
         /></a>
         <div class="desc">Siompu Baubau</div>
       </div>
@@ -52,7 +52,7 @@
       <div class="column">
         <a href="siompuTopa/siompuTopa.html">
           <img
-            src="img/topa.png"
+            src="img/topa.jpg"
             alt="siompu"
             style="width: 100%"
             alt="siompu"
@@ -62,14 +62,14 @@
 
       <div class="column">
         <a href="siompuBatauga/batauga.html">
-          <img src="img/batauga.png" style="width: 100%" alt="siompu"
+          <img src="img/batauga.jpg" style="width: 100%" alt="siompu"
         /></a>
         <div class="desc">Siompu Batauga</div>
       </div>
 
       <div class="column">
         <a href="#">
-          <img src="img/molona.png" style="width: 100%" alt="siompu"
+          <img src="img/molona.jpg" style="width: 100%" alt="siompu"
         /></a>
         <div class="desc">Siompu Barat Baubau</div>
       </div>
