fix digital clock

--- a/siompuBaubau/mei.html
+++ b/siompuBaubau/mei.html
@@ -45,12 +45,7 @@
       Mei 2022
     </p>
 
-    <tr>
-      <td class="hari2"></td>
-      <td class="bulan2"></td>
-      <td class="tahun2"></td>
-    </tr>
-  </table>
+    <p id="hari2"></p>
 
     <table>
       <tr>
