--- a/siompuBaubau/april.html
+++ b/siompuBaubau/april.html
@@ -41,14 +41,19 @@
       </nav>
     </header>
     <p class="text1">Jadwal Kapal Siompu Baubau <br /></p>
+    <div id="jamDigital" class="clock" onload="showTime()"></div>
 
     <table class="kalenderjs">
       <tr>
+        <td id="menit"></td>
+        <td id="jam"></td>
         <td id="hari"></td>
         <td id="bulan"></td>
         <td id="tahun"></td>
       </tr>
     </table>
+
+    
 
     <table>
       <tr>
