--- a/siompuBaubau/april.html
+++ b/siompuBaubau/april.html
@@ -40,20 +40,9 @@
         </div>
       </nav>
     </header>
-    <p class="text1">Jadwal Kapal Siompu Baubau <br /></p>
     <div id="jamDigital" class="clock" onload="showTime()"></div>
-
-    <table class="kalenderjs">
-      <tr>
-        <td id="menit"></td>
-        <td id="jam"></td>
-        <td id="hari"></td>
-        <td id="bulan"></td>
-        <td id="tahun"></td>
-      </tr>
-    </table>
-
-    
+    <p class="text1">Jadwal Kapal Siompu Baubau <br /></p>
+    <div id="tanggal" class="kalenderjs" onload="showDate()"></div>
 
     <table>
       <tr>
