add js in mei and juni

--- a/siompuBaubau/mei.html
+++ b/siompuBaubau/mei.html
@@ -40,10 +40,9 @@
         </div>
       </nav>
     </header>
-    <p class="text1">
-      Jadwal Kapal Siompu Baubau <br />
-      Mei 2022
-    </p>
+    <div id="jamDigital" class="clock" onload="showTime()"></div>
+    <p class="text1">Jadwal Kapal Siompu Baubau <br /></p>
+    <div id="tanggal" class="kalenderjs" onload="showDate()"></div>
 
     <p id="hari2"></p>
 
