--- a/siompuBaubau/juni.html
+++ b/siompuBaubau/juni.html
@@ -40,10 +40,9 @@
         </div>
       </nav>
     </header>
-    <p class="text1">
-      Jadwal Kapal Siompu Baubau <br />
-      Juni 2022
-    </p>
+    <div id="jamDigital" class="clock" onload="showTime()"></div>
+    <p class="text1">Jadwal Kapal Siompu Baubau <br /></p>
+    <div id="tanggal" class="kalenderjs" onload="showDate()"></div>
     <table>
       <tr>
         <td class="hari">sen</td>
