--- a/tentang.html
+++ b/tentang.html
@@ -41,9 +41,9 @@
       </nav>
     </header>
     <p class="about">
-      aplikasi ini di buat oleh orang siompu, tujuan dari aplikasi ini dibuat
-      bermula dari masyarakat siompu yang selalu bertanya mengenai jadwal kapal
-      siompu.
+      aplikasi ini di buat oleh orang siompu, tujuan dari aplikasi ini untuk
+      mempermudah orang mengetahui jadwal kapal siompu yang akan berangkat
+      setiap hari.
     </p>
   </body>
 
