--- a/siompuTopa/siompuTopa.html
+++ b/siompuTopa/siompuTopa.html
@@ -44,9 +44,9 @@
     <p class="about">
       kapal siompu topa memiliki 2 rute terdiri dari pagi hari dan siang hari.
       Pada rute pagi hari kapal akan berangkat dari siompu ke topa jam 7.00 WITA
-      dan dari topa ke Siompu jam 9.00 WITA. sedangkan pada rute siang hari
-      kapal akan berangkat dari siompu ke baubau jam 1:30 WITA dan dari baubau
-      ke Siompu jam 3:30 WITA.Karena jumlah kapal ada tujuh maka jadwal kapal
+      dan dari topa ke Siompu jam 9.00 WITA. pada saat siang kapal akan
+      berangkat kembali dari siompu ke baubau jam 1:30 WITA dan dari baubau ke
+      Siompu jam 3:30 WITA.Karena jumlah kapal ada tujuh maka jadwal kapal
       diurutkan berdasarkan jumlah hari sebagai berikut:
     </p>
 
