--- a/siompuBaubau/mei.html
+++ b/siompuBaubau/mei.html
@@ -63,47 +63,47 @@
         <td>x <br /></td>
         <td>x <br /></td>
         <td>x <br /></td>
-        <td>1 <br /><span>BK</span></td>
+        <td>1 <br /><span>SP</span></td>
       </tr>
       <tr>
-        <td>2 <br /><span>SP</span></td>
-        <td>3 <br /><span>LT</span></td>
-        <td>4 <br /><span>B7</span></td>
-        <td>5 <br /><span>B6</span></td>
-        <td>6 <br /><span>TK</span></td>
-        <td>7 <br /><span>BK</span></td>
-        <td>8 <br /><span>SP</span></td>
+        <td>2 <br /><span>lt</span></td>
+        <td>3 <br /><span>B7</span></td>
+        <td>4 <br /><span>B6</span></td>
+        <td>5 <br /><span>TK</span></td>
+        <td>6 <br /><span>BK</span></td>
+        <td>7 <br /><span>SP</span></td>
+        <td>8 <br /><span>LT</span></td>
       </tr>
       <tr>
-        <td>9 <br /><span>LT</span></td>
-        <td>10 <br /><span>B7</span></td>
-        <td>11 <br /><span>B6</span></td>
-        <td>12 <br /><span>TK</span></td>
-        <td>13 <br /><span>BK</span></td>
-        <td>14 <br /><span>SP</span></td>
-        <td>15 <br /><span>LT</span></td>
+        <td>9 <br /><span>B7</span></td>
+        <td>10 <br /><span>B6</span></td>
+        <td>11 <br /><span>TK</span></td>
+        <td>12 <br /><span>BK</span></td>
+        <td>13 <br /><span>SP</span></td>
+        <td>14 <br /><span>LT</span></td>
+        <td>15 <br /><span>B7</span></td>
       </tr>
       <tr>
-        <td>16 <br /><span>B7</span></td>
-        <td>17 <br /><span>B6</span></td>
-        <td>18 <br /><span>TK</span></td>
-        <td>19 <br /><span>BK</span></td>
-        <td>20 <br /><span>SP</span></td>
-        <td>21 <br /><span>LT</span></td>
-        <td>22 <br /><span>B7</span></td>
+        <td>16 <br /><span>B6</span></td>
+        <td>17 <br /><span>TK</span></td>
+        <td>18 <br /><span>BK</span></td>
+        <td>19 <br /><span>SP</span></td>
+        <td>20 <br /><span>LT</span></td>
+        <td>21 <br /><span>B7</span></td>
+        <td>22 <br /><span>B6</span></td>
       </tr>
       <tr>
-        <td>23 <br /><span>B6</span></td>
-        <td>24 <br /><span>TK</span></td>
-        <td>25 <br /><span>BK</span></td>
-        <td>26 <br /><span>SP</span></td>
-        <td>27 <br /><span>LT</span></td>
-        <td>28 <br /><span>B7</span></td>
-        <td>29 <br /><span>B6</span></td>
+        <td>23 <br /><span>TK</span></td>
+        <td>24 <br /><span>BK</span></td>
+        <td>25 <br /><span>SP</span></td>
+        <td>26 <br /><span>LT</span></td>
+        <td>27 <br /><span>B7</span></td>
+        <td>28 <br /><span>B6</span></td>
+        <td>29 <br /><span>TK</span></td>
       </tr>
       <tr>
-        <td>30 <br /><span>B6</span></td>
-        <td>31 <br /><span>TK</span></td>
+        <td>30 <br /><span>BK</span></td>
+        <td>31 <br /><span>SP</span></td>
         <td>x</td>
         <td>x</td>
         <td>x</td>
